# mearm

./: README.md
fusion/: angle.py  setup.sh
gtest/: CMakeLists.txt  Commands.cpp  Commands.h  init.sh  test.sh
gtest/tests/: Suite.cpp
python/: ctrl.py  env.sh  grab.py  loop.py  mouse.py  setup.sh  states.py  wave.py
usb/: Makefile  config.c  docker.sh  flash.sh  main.c
